# Starry

./: B.py  main.py  modify.py  piclinks.py  pyproject.toml
cogs/: BotInfo.py  Calculator.py  Fun.py  Giveaway.py  Google.py  Meme.py  RandomTrivia.py  Twitter.py  balance.py  epic.py
emoji/: status.txt
